--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "mock:step1": "json-server --watch mocks/db-step1.json --port 4001",
+    "mock:step2": "json-server --watch mocks/db-step2.json --port 4002",
+    "dev": "concurrently \"pnpm:next\" \"pnpm:mock:step1\" \"pnpm:mock:step2\"",
+    "next": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -21,9 +24,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
+    "json-server": "1.0.0-beta.5",
     "sass": "^1.97.3",
     "typescript": "^5"
   }
