--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
-    "json-server": "1.0.0-beta.5",
+    "json-server": "0.17",
     "sass": "^1.97.3",
     "typescript": "^5"
   }
