--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
     "json-server": "0.17",
+    "prettier": "^3.8.1",
     "sass": "^1.97.3",
     "typescript": "^5"
   }
