--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prettier": "^3.8.1",
     "sass": "^1.97.3",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write"
   }
 }
